dev/scss/reset.scss
// Resets & Personal preferences
* {
	box-sizing: border-box;
}
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strike, strong, sub, sup, tt, var,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
  background-repeat: no-repeat;
	border: 0;
	font-family: inherit;
	font-size: 100%;
	font-style: inherit;
	font-weight: inherit;
	margin: 0;
	outline: 0;
	padding: 0;
	vertical-align: baseline;
}
body {
	// Dark Mode Only
	background-color: black;
	color: white;
	line-height: 1;
}
embed,
iframe,
img,
video {
	display: block;
	height: auto;
	max-width: 100%;
}
table {
	border-collapse: separate;
	border-spacing: 0;
}
caption, th, td {
	text-align: left;
	font-weight: normal;
}
blockquote::before, blockquote::after,
q::before, q::after {
	content: "";
}
blockquote, q {
	quotes: "" "";
}
input,
select,
textarea {
	max-width: 100%;
}

